force-app/main/default/objects/ssot__ActivityTopic__dlm/fields/ssot__ActivityObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActivityObject__c</fullName>
    <label>Activity Object</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActivityObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>