force-app/main/default/objects/ssot__ActivityTopic__dlm/fields/ssot__rel_1705642063030_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705642063030_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivityTopic_RelatedToId_map_Opport_rel</label>
    <referenceTo>ssot__Opportunity__dlm</referenceTo>
    <relationshipLabel>ActivityTopic_RelatedToId_map_Opport_rel</relationshipLabel>
    <relationshipName>rel_1705642063030_end</relationshipName>
    <type>Lookup</type>
</CustomField>