force-app/main/default/objects/ssot__ActivityTopic__dlm/fields/ssot__rel_1705642066789_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705642066789_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivityTopic_RelatedToId_map_Accoun_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ActivityTopic_RelatedToId_map_Accoun_rel</relationshipLabel>
    <relationshipName>rel_1705642066789_end</relationshipName>
    <type>Lookup</type>
</CustomField>