force-app/main/default/objects/ssot__ActivityTopic__dlm/fields/ssot__rel_1709016160441_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1709016160441_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActivityTopic_RelatedToId_map_Case_I_rel</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>ActivityTopic_RelatedToId_map_Case_I_rel</relationshipLabel>
    <relationshipName>rel_1709016160441_end</relationshipName>
    <type>Lookup</type>
</CustomField>