force-app/main/default/objects/ssot__ActivityTopic__dlm/fields/ssot__RelatedToObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedToObject__c</fullName>
    <label>Related To Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedToObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>